--- a/serverless.yml
+++ b/serverless.yml
@@ -18,6 +18,8 @@ functions:
       - http:
           path: /
           method: get
+    environment:
+      restaurants_api: https://7spdfk6nw7.execute-api.us-east-1.amazonaws.com/dev/restaurants
 
   get-restaurants:
     handler: functions/get-restaurants.handler
