--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws4": "^1.7.0",
     "bluebird": "^3.5.1",
     "co": "^4.6.0",
     "mustache": "^2.3.0",
