--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "integration-test": "env TEST_MODE=handler ./node_modules/.bin/mocha tests/test_cases --reporter spec"
+    "integration-test": "env TEST_MODE=handler ./node_modules/.bin/mocha tests/test_cases --reporter spec",
+    "acceptance-test": "env TEST_MODE=http TEST_ROOT=https://pj9qv95mp4.execute-api.us-east-1.amazonaws.com/dev ./node_modules/.bin/mocha tests/test_cases --reporter spec --retries 3 --timeout 5000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "aws4": "^1.7.0",
     "bluebird": "^3.5.1",
+    "chance": "^1.0.16",
     "co": "^4.6.0",
     "lodash": "^4.17.10",
     "mustache": "^2.3.0",
@@ -18,7 +20,8 @@
     "superagent-promise": "^1.1.0"
   },
   "devDependencies": {
-    "aws-sdk": "^2.275.1",
+    "aws-sdk": "^2.278.1",
+    "awscred": "^1.4.1",
     "chai": "^4.1.2",
     "cheerio": "^1.0.0-rc.2",
     "mocha": "^5.2.0",
