--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.1.2",
     "cheerio": "^1.0.0-rc.2",
     "mocha": "^5.2.0",
-    "serverless-pseudo-parameters": "^1.6.0"
+    "serverless": "^1.28.0",
+    "serverless-pseudo-parameters": "^2.1.0"
   }
 }
